@@ -1,7 +1,6 @@
 # encoding: utf-8
 import copy
 import datetime
-from collections import defaultdict
 from sql.functions import Now
 
 from trytond.error import UserError
@@ -920,11 +919,7 @@ class EndorsementContract(values_mixin('endorsement.contract.field'),
         depends=['state', 'contract', 'definition'],
         context={'definition': Eval('definition')})
     contract = fields.Many2One('contract', 'Contract', required=True,
-        datetime_field='applied_on',
-        states={
-            'readonly': Eval('state') == 'applied',
-            },
-        depends=['state'])
+        states={'readonly': Eval('state') == 'applied'}, depends=['state'])
     endorsement = fields.Many2One('endorsement', 'Endorsement', required=True,
         ondelete='CASCADE')
     options = fields.One2Many('endorsement.contract.option',
@@ -977,10 +972,12 @@ class EndorsementContract(values_mixin('endorsement.contract.field'),
     def base_instance(self):
         if not self.contract:
             return None
-        if not self.applied_on:
+        if not self.endorsement.rollback_date:
             return self.contract
-        return utils.get_history_instance('contract', self.contract.id,
-            self.applied_on)
+        with Transaction().set_context(
+                _datetime=self.endorsement.rollback_date,
+                _datetime_exclude=True):
+            return Pool().get('contract')(self.contract.id)
 
     def get_definition(self, name):
         return self.endorsement.definition.id if self.endorsement else None
@@ -1014,16 +1011,23 @@ class EndorsementContract(values_mixin('endorsement.contract.field'),
     def search_state(cls, name, clause):
         return [('endorsement.state',) + tuple(clause[1:])]
 
+    @classmethod
+    def _get_restore_history_order(cls):
+        return ['contract', 'contract.activation_history', 'contract.option']
+
     def do_restore_history(self):
         pool = Pool()
-        restore_dict = defaultdict(list)
-        restore_dict['contract'] += [self.contract,
-            pool.get('contract')(self.contract.id)]
+        models_to_restore = self._get_restore_history_order()
+        restore_dict = {x: [] for x in models_to_restore}
+        restore_dict['contract'] += [self.contract, self.base_instance]
         self._prepare_restore_history(restore_dict,
             self.endorsement.rollback_date)
 
-        for k, v in restore_dict.iteritems():
-            pool.get(k).restore_history_before(list(set([x.id for x in v])),
+        for model_name in models_to_restore:
+            if not restore_dict[model_name]:
+                continue
+            pool.get(model_name).restore_history_before(
+                list(set([x.id for x in restore_dict[model_name]])),
                 self.endorsement.rollback_date)
 
     @classmethod
