@@ -65,6 +65,15 @@ class EndorsementContract:
                 })
 
     @classmethod
+    def _get_restore_history_order(cls):
+        order = super(EndorsementContract, cls)._get_restore_history_order()
+        contract_idx = order.index('contract')
+        order.insert(contract_idx + 1, 'contract.covered_element')
+        option_idx = order.index('contract.option')
+        order.insert(option_idx + 1, 'contract.option.extra_premium')
+        return order
+
+    @classmethod
     def _prepare_restore_history(cls, instances, at_date):
         super(EndorsementContract, cls)._prepare_restore_history(instances,
             at_date)
