@@ -38,6 +38,7 @@ Get Models::
     >>> CoveredElement = Model.get('contract.covered_element')
     >>> Currency = Model.get('currency.currency')
     >>> CurrencyRate = Model.get('currency.currency.rate')
+    >>> Endorsement = Model.get('endorsement')
     >>> EndorsementDefinition = Model.get('endorsement.definition')
     >>> EndorsementPart = Model.get('endorsement.part')
     >>> EndorsementDefinitionPartRelation = Model.get(
@@ -45,8 +46,10 @@ Get Models::
     >>> EndorsementLoanField = Model.get('endorsement.loan.field')
     >>> Field = Model.get('ir.model.field')
     >>> FiscalYear = Model.get('account.fiscalyear')
+    >>> Insurer = Model.get('insurer')
     >>> ItemDescription = Model.get('offered.item.description')
     >>> Loan = Model.get('loan')
+    >>> LoanIncrement = Model.get('loan.increment')
     >>> LoanShare = Model.get('loan.share')
     >>> LoanAveragePremiumRule = Model.get('loan.average_premium_rule')
     >>> Party = Model.get('party.party')
@@ -59,7 +62,6 @@ Get Models::
     >>> SequenceStrict = Model.get('ir.sequence.strict')
     >>> SequenceType = Model.get('ir.sequence.type')
     >>> User = Model.get('res.user')
-    >>> Insurer = Model.get('insurer')
 
 Constants::
 
@@ -380,4 +382,12 @@ Test result::
     >>> loan.first_payment_date == new_payment_date
     True
     >>> loan.end_date == new_loan_end_date
+    True
+
+Test cancellation::
+
+    >>> endorsement, = Endorsement.find([('loans', '=', loan.id)])
+    >>> Endorsement.cancel([endorsement.id], config._context)
+    >>> increments = LoanIncrement.find([('loan', '=', loan.id)])
+    >>> len(increments) == 1
     True
