@@ -3,6 +3,7 @@ from trytond.pool import PoolMeta
 
 __all__ = [
     'ContractFee',
+    'Premium',
     'EndorsementContract',
     ]
 
@@ -13,9 +14,23 @@ class ContractFee:
     __name__ = 'contract.fee'
 
 
+class Premium:
+    _history = True
+    __metaclass__ = PoolMeta
+    __name__ = 'contract.premium'
+
+
 class EndorsementContract:
     __metaclass__ = PoolMeta
     __name__ = 'endorsement.contract'
+
+    @classmethod
+    def _get_restore_history_order(cls):
+        order = super(EndorsementContract, cls)._get_restore_history_order()
+        contract_idx = order.index('contract')
+        order.insert(contract_idx + 1, 'contract.fee')
+        order.append('contract.premium')
+        return order
 
     @classmethod
     def _prepare_restore_history(cls, instances, at_date):
@@ -23,3 +38,4 @@ class EndorsementContract:
             at_date)
         for contract in instances['contract']:
             instances['contract.fee'] += contract.fees
+            instances['contract.premium'] += contract.all_premiums
