@@ -1,3 +1,5 @@
+* Allow to specify restoration order
+
 Version 1.3 - 2015-01-22
 * Add sub-state to endorsement
 * Allow to revert back to the version before the endorsement application
